--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,6 @@
 ---
 interface Personage {
+  id: number;
   name: string;
   image: string;
   status: string;
@@ -14,25 +15,31 @@ const dataAttri = personage.name.toLowerCase().replace(/\s+/g, "-");
 ---
 
 <article data-name={dataAttri} class="cursor-pointer">
-  <div
-    class="bg-bg-card/70 p-3 rounded-xl hover:shadow-md-primary transition-all duration-200 ease-in hover:-translate-y-1 hover:bg-bg-card/90"
-  >
-    <figure class="relative">
-      <img
-        src={personage.image}
-        alt={personage.name}
-        class="w-full h-48 object-cover rounded-md mb-4"
-        loading="lazy"
-      />
-      <p
-        class="text-xs text-text-dark absolute bg-primary p-1 px-3 rounded-full top-2 left-2 font-bold"
+  <a href={`/character/${personage.id}`} class="block">
+    <div
+      class="bg-bg-card/70 p-3 rounded-xl hover:shadow-md-primary transition-all duration-200 ease-in hover:-translate-y-1 hover:bg-bg-card/90"
+    >
+      <figure class="relative">
+        <img
+          src={personage.image}
+          alt={personage.name}
+          class="w-full h-48 object-cover rounded-md mb-4"
+          loading="lazy"
+          transition:name={`personage-image-${personage.id}`}
+        />
+        <p
+          class="text-xs text-text-dark absolute bg-primary p-1 px-3 rounded-full top-2 left-2 font-bold"
+        >
+          {personage.species}
+        </p>
+      </figure>
+      <h3
+        class="text-lg font-semibold mb-2 text-white truncate"
+        transition:name={`personage-name-${personage.id}`}
       >
-        {personage.species}
-      </p>
-    </figure>
-    <h3 class="text-lg font-semibold mb-2 text-white truncate">
-      {personage.name}
-    </h3>
-    <p class="text-text-secondary mb-1 text-xs">Estado: {personage.status}</p>
-  </div>
+        {personage.name}
+      </h3>
+      <p class="text-text-secondary mb-1 text-xs">Estado: {personage.status}</p>
+    </div>
+  </a>
 </article>
