--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import HeaderPage from "@/sections/HeaderPage.astro";
 import SearchPersonage from "@/components/SearchPersonage.astro";
 import FiltersPersonage from "@/components/FiltersPersonage.astro";
 import Personages from "@/sections/Personages.astro";
+import Pagination from "@/components/Pagination.astro";
 ---
 
 <Layout
@@ -13,5 +14,6 @@ import Personages from "@/sections/Personages.astro";
 	<HeaderPage />
 	<SearchPersonage />
 	<FiltersPersonage />
-	<Personages />
+	<!-- <Personages /> -->
+	<Pagination />
 </Layout>
