--- a/src/components/ButtonClear.astro
+++ b/src/components/ButtonClear.astro
@@ -1,29 +1,21 @@
 ---
-interface Props {
-  text: string;
+import type { HTMLAttributes } from "astro/types";
+
+interface Props extends HTMLAttributes<"button"> {
   id?: string;
+  moreclass?: string;
 }
 
-const { text, id } = Astro.props;
+const { id, moreclass, ...rest } = Astro.props;
 ---
 
 <button
   id={id}
-  class="px-6 py-2 rounded-lg bg-primary/10 border-2 border-primary text-primary hover:bg-primary hover:text-text-dark transition-all duration-200 font-semibold text-sm flex items-center gap-2"
+  {...rest}
+  class:list={[
+    "px-6 py-2 rounded-lg bg-primary/10 border-2 border-primary text-primary hover:bg-primary hover:text-text-dark transition-all duration-200 font-semibold text-sm flex items-center gap-2 cursor-pointer",
+    moreclass,
+  ]}
 >
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    class="w-4 h-4"
-    fill="none"
-    viewBox="0 0 24 24"
-    stroke="currentColor"
-  >
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-    ></path>
-  </svg>
-  {text}
+  <slot />
 </button>
