--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
 		<meta name="description" content={description} />
 		<ClientRouter />
 	</head>
-	<body class="bg-bg-primary text-text-primary font-inter">
+	<body class="bg-bg-primary text-text-primary font-inter relative">
 		<slot />
 	</body>
 </html>
